* fix align text

--- a/css/menu.css
+++ b/css/menu.css
@@ -119,7 +119,6 @@
     padding-left: 0.5em;
     padding-right: 2em;
     height: 1.8em;
-    line-height: 1.8em;
     white-space: nowrap;
     position: relative;
 }
